test/apps/basics/src/routes/errors/serverside.svelte
<script>
	throw new Error('Crashing now');
</script>
